# project-python-final

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/: CODEOWNERS
src/: assistant.py  birthdays.py  handlers.py  models.py
