[project]
name = "assistant-bot"
version = "1.0.0"
description = "CLI assistant for managing contacts and notes"
requires-python = ">=3.10"

dependencies = []

[project.scripts]
assistant-bot = "main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
py-modules = ["main", "src"]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
